# MedData

./: .gitattributes  .gitignore  CONTRIBUTING.md  Gemfile  LICENSE  README.md  _config.yml  about.html  about.md  index.html  index.md  meddata.py  package.json  purge.js  purgecss.config.js  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  test.env  test_meddata.py
.github/workflows/: build-deploy.yml
_data/: datasets.yml
_datasets/: devto.yml  medium.yml
_datasets_collection/: devto.md  medium.md
_includes/: dataset-card.html  dataset-content.html  dataset-page.html  footer.html  header.html  stats-display.html
_layouts/: dataset.html  default.html  documentation.html  home.html
about/: index.html
assets/: brand.css
assets/css/: custom.css  docs.css  main.css  themes.css
assets/js/: favicon-updater.js  generate-logos.js  main.js  theme.js
dataset/: medium.yml
dataset/devto/: docs.html  docs.md  index.html  index.md
dataset/medium/: docs.html  docs.md  index.html  index.md
docs/: README.md  TROUBLESHOOTING.md  index.md  technical.md
example-docs/huggingface/: CITATION.cff  CONTRIBUTING.md  README.md  dataset-card.md
example-docs/kaggle/: LICENSE  README.md  dataset-card.md
scripts/: create-dataset.py  generate-assets.py  generate-docs.py  generate-logos.sh  process-dataset.py  publish-dataset.py  setup-datasets.js
scripts/other/: fix-docs.js  preview-site.py  preview.py  setup-datasets.js
scripts/utils/: README.md  (+6 more)
templates/: dataset.yml.template
website/: index.html  robots.txt  site.webmanifest  sitemap.xml  styles.css
(+32 files in other folders)
