[tool.poetry]
name = "meddata"
version = "0.1.0"
description = "MedData Engineering Hub command-line interface and utilities"
authors = ["Alaamer <ahmedmuhmmed239@gmail.com>"]
readme = "README.md"
homepage = "https://alaamer12.github.io/MedData"
repository = "https://github.com/alaamer12/MedData"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"

[tool.poetry.scripts]
meddata = "meddata:main"

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
