[tool.poetry]
name = "meddata"
version = "0.1.0"
description = "MedData Engineering Hub command-line interface and utilities"
authors = ["Alaamer <ahmedmuhmmed239@gmail.com>"]
readme = "README.md"
homepage = "https://alaamer12.github.io/MedData"
repository = "https://github.com/alaamer12/MedData"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
pyyaml = "^6.0.2"
pandas = "^2.3.1"
datasets = "^4.0.0"
huggingface-hub = "^0.33.4"
kaggle = "^1.7.4.5"
kagglehub = "^0.3.12"
rich = "^14.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"

[tool.poetry.scripts]
meddata = "meddata:main"

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
